# gnews

./: Makefile  docker-compose.dev.yml
api/: Dockerfile  main.py  pyproject.toml
web/: Dockerfile  package.json
web/public/: index.html
web/src/: App.tsx  apiClient.ts  index.tsx
web/src/components/: Filters.tsx  News.tsx
