[tool.poetry]
name = "gnews"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9.7"
fastapi = {extras = ["all"], version = "^0.70.0"}
gnewsclient = "^1.12"

[tool.poetry.dev-dependencies]
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
